# sickle_example

./: Cargo.toml
src/: banner_widget.rs  fps_widget.rs  lib.rs  main.rs
