[package]
name = "sickle_example"
version = "0.2.0"
edition = "2021"

[dependencies]
## Bevy
bevy = { version = "0.14.0-rc.4" }

## Bevy Inspector Egui makes it easy to modify widgets at runtime.
#bevy-inspector-egui = "0.24"

## Sickle is a UI library for Bevy.
sickle_ui = { version = "0.2.0", git = "https://github.com/knutsoned/sickle_ui", branch = "014rc4" }
sickle_macros = { version = "0.2.0", git = "https://github.com/knutsoned/sickle_ui", branch = "014rc4" }
sickle_math = { version = "0.2.0", git = "https://github.com/knutsoned/sickle_ui", branch = "014rc4" }
sickle_ui_scaffold = { version = "0.2.0", git = "https://github.com/knutsoned/sickle_ui", branch = "014rc4" }