[package]
name = "sickle_example"
version = "0.2.0"
edition = "2021"

[dependencies]
## Bevy
bevy = { version = "0.14.0" }

## Bevy Inspector Egui makes it easy to modify widgets at runtime.
#bevy-inspector-egui = "0.24"

## Sickle is a UI library for Bevy.
sickle_ui = { version = "0.2", git = "https://github.com/UmbraLuminosa/sickle_ui" }
sickle_macros = { version = "0.2", git = "https://github.com/UmbraLuminosa/sickle_ui" }
sickle_math = { version = "0.2", git = "https://github.com/UmbraLuminosa/sickle_ui" }
sickle_ui_scaffold = { version = "0.2", git = "https://github.com/UmbraLuminosa/sickle_ui" }
